feat(conversations): add conversations to mongodb and create an api with node restful

--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "Gustavo Castilião <gucastiliao@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "botkit": "^0.6.7",
     "dotenv": "^4.0.0",
+    "express": "^4.16.2",
     "lodash": "^4.17.4",
+    "mongoose": "^5.0.0-rc1",
+    "node-restful": "^0.2.6",
     "request": "^2.83.0"
   },
   "devDependencies": {
